# ottocento-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua  vcpkg.json
cmake/: BuildType.cmake  Coverage.cmake  Sanitizers.cmake  Warnings.cmake  toolchain.cmake  vcpkg.cmake
dev/: ubuntu.sh
doc/: build.md  resources.md  styleguide.md
lib/: CMakeLists.txt  application.cxx  camera.cxx  camera_system.cxx  descriptor.cxx  device.cxx  helpers.cxx  impl.cxx  lib_impl.cxx  model.cxx  pipeline.cxx  random.cxx  renderer.cxx  swapchain.cxx  utils.cxx  window.cxx
lib/include/: application.h  application.hxx  camera.h  camera_param_component.h  camera_pos_component.h  camera_system.h  descriptor.h  device.h  fmtfs.hxx  helpers.h  image.h  input.hxx  logger.h  macros.h  model.h  pipeline.h  renderer.h  swapchain.h  utils.hxx  window.h
lib/shaders/: compile.bat
resource/: CMakeLists.txt
resource/matcap/: CMakeLists.txt
resource/models/: CMakeLists.txt  readme.md  sandoy_model.mtl
resource/shaders/: CMakeLists.txt  compile.bat  compile.sh  grid.frag  grid.vert  grid_fragment.spv  object.frag  object.vert  object_fragment.spv  object_vertex.spv  solid_shading.frag  texture.frag  wireframe.frag  wireframe_fragment.spv
resource/textures/: CMakeLists.txt
src/: CMakeLists.txt  application.cxx  application.h  application.hpp  application.hxx  camera.cxx  camera.h  camera.hpp  device.cxx  device.h  helpers.cxx  helpers.h  ifc_reader.cxx  ifc_reader.h  image.cxx  input.hpp  input.hxx  lib_impl.cxx  macros.h  main.cpp  main.cxx  model.h  pipeline.h  renderer.cxx  renderer.h  swapchain.cxx  swapchain.h  utils.hxx  window.cxx  window.h
src/models/: viking_room.mtl
src/shaders/: compile.bat  frag.spv  grid.frag  grid.vert  gridFrag.spv  gridVert.spv  shader.frag  shader.vert  vert.spv
src/textures/: Tiles132A_1K-JPG.mtlx  Tiles132A_1K-JPG.usdc
test/: CMakeLists.txt  first_test.cxx
